se agregaron imagenes

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 .fondo-verde{
-    background-color: aquamarine;
+    background-color: #00a2ff;
     height: 500px;
     text-align: center;
     
