--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 .fondo-verde{
-    background-color: #00a2ff;
-    height: 500px;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0% ,rgba(0,162,255,1) 100%);    height: 51vh;
     text-align: center;
     
 }
@@ -9,10 +9,19 @@
     height: 275px;
 
 }
+.titulo{
 
+    
+}
 .fondo-verde{
     padding-top: 50px;
 }
 .fondo-verde h1::selection{
  background-color: transparent ;    
+}
+
+.footer{
+    background: rgb(0,162,255);
+    background: linear-gradient(45deg, rgba(0,162,255,1) 0%,  rgba(2,0,36,1) 100%);
+
 }
