--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@
     height: 275px;
 
 }
-.titulo{
+/* .titulo{
 
     
-}
+} */
 .fondo-verde{
     padding-top: 50px;
 }
@@ -24,4 +24,7 @@
     background: rgb(0,162,255);
     background: linear-gradient(45deg, rgba(0,162,255,1) 0%,  rgba(2,0,36,1) 100%);
 
+}
+.a{
+    height: 85vh;
 }
