--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
 
 
 .form-row button{
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 footer{
     position: fixed;
@@ -44,5 +44,5 @@ footer{
 }
 
 .enviar{
-    padding: 10px!important; 
+    padding: 0 10px!important; 
 }
