--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,20 @@
 
-.fondo-verde{
+body{
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0% ,rgba(0,162,255,1) 100%);    height: 51vh;
-    text-align: center;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0% ,rgba(0,162,255,1) 100%);
     
 }
 .perfil img {
     height: 275px;
 
 }
-/* .titulo{
 
-    
-} */
-.fondo-verde{
+
+.fondo{
     padding-top: 50px;
+
 }
-.fondo-verde h1::selection{
+.fondo h1::selection{
  background-color: transparent ;    
 }
 
@@ -34,9 +32,6 @@
 }
 
 
-.form-row button{
-    /* margin-top: 30px; */
-}
 footer{
     position: fixed;
     bottom: 0;
@@ -46,3 +41,5 @@ footer{
 .enviar{
     padding: 0 10px!important; 
 }
+
+
