--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,14 @@ footer{
     
     }
 }
+
+.verde{
+    color: #3FEB5F;
+}
+
+.boton-wsp{
+    margin-top: 50%;
+    background-color: #2b00ff8c;
+    padding: 1px;
+}
+
