--- a/styles.css
+++ b/styles.css
@@ -97,5 +97,10 @@ footer{
     margin-bottom: 25px;
 }
 
-.zoom { transition: all .2s ease-in-out; z-index: 2;border-radius: 8px; }
-.zoom:hover { transform: scale(1.6); }
+.zoom{ 
+    transition: all .2s ease-in-out;
+    border-radius: 8px;
+}
+.zoom:hover{
+    transform: scale(1.6);  z-index: 2
+}
