--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,11 @@ footer{
 .zoom{ 
     transition: all .2s ease-in-out;
     border-radius: 8px;
+    height: 20rem ;
 }
 .zoom:hover{
     transform: scale(1.6);  z-index: 2
+}
+
+.card{
 }
